<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.chrissetiana.notekeeper.NoteActivity">

    <item
        android:id="@+id/action_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="0"
        android:title="@string/menu_cancel"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_next"
        android:icon="@android:drawable/ic_media_next"
        android:orderInCategory="1"
        android:title="@string/menu_next"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_send_mail"
        android:orderInCategory="2"
        android:title="@string/menu_send_email"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_image"
        android:orderInCategory="3"
        android:title="@string/menu_add_image"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set_reminder"
        android:orderInCategory="4"
        android:title="@string/menu_set_reminder"
        app:showAsAction="never" />

</menu>
